--- a/src/package.json
+++ b/src/package.json
@@ -9,6 +9,13 @@
         "@vitejs/plugin-vue": "^5.0.4",
         "axios": "^1.6.4",
         "laravel-vite-plugin": "^1.0",
+        "sass": "^1.77.1",
         "vite": "^5.0"
+    },
+    "dependencies": {
+        "bootstrap": "^5.3.3",
+        "vue": "^3.4.27",
+        "vue-loader": "^17.4.2",
+        "vue-router": "^4.3.2"
     }
 }
