--- a/src/package.json
+++ b/src/package.json
@@ -14,6 +14,7 @@
     },
     "dependencies": {
         "bootstrap": "^5.3.3",
+        "laravel-vue-pagination": "^4.1.3",
         "vue": "^3.4.27",
         "vue-loader": "^17.4.2",
         "vue-router": "^4.3.2"
